# barnacle-boilerplate

./: .gitignore  2-normalize-sctransform.ipynb  3-tensorize-data.ipynb  4-fit-barnacle.ipynb  5-analyze-results.ipynb  Dockerfile  LICENSE  README.md  grid-search.py  pyproject.toml
data/: metadata.csv
